fixed alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,10 @@ body {
   padding: 40px 40px;
   box-sizing: border-box;
 }
+.container4 {
+  padding: 30px 40px;
+  box-sizing: border-box;
+}
 
 .section-title {
   text-align: center;
